2015-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-util.c: Fix memory allocation issue.

2015-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Support include in backup mode.

2015-01-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix state file update.

2015-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: DParse new AWS4 STORAGE-API.
	* device-src/s3-util.c (s3_compute_sha256_hash_ba,
	  s3_compute_sha256_hash, EncodeHMACSHA256, s3_tohex): New function.
	* device-src/s3-util.h (s3_compute_sha256_hash_ba,
	  s3_compute_sha256_hash, EncodeHMACSHA256,
	  s3_tohex): New prototypes.
	* device-src/s3.c: Compute signature for AWS4.
	* device-src/s3.h (S3_api): Add S3_API_UNKNOWN and S3_API_AWS4.
	* man/xml-source/amanda-devices.7.xml (STORAGE_API): Document AWS4.

2015-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Detect BSD variant, Do not
	  execute /usr/bin/sw_vers if it doesn't exists.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amreport.pl, perl/Amanda/DB/Catalog.pm,
	  perl/Amanda/Logfile.swg, server-src/amdump.pl,
	  server-src/driver.c: CNF_LOGIDR can be relative.

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* config/compile, config/config.guess, config/config.sub,
	  config/depcomp, config/install-sh, config/missing,
	  config/mkinstalldirs, config/ylwrap: Upgrade to automake 1.14.1

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cmdline.swg, perl/Amanda/Device.swg,
	  perl/Amanda/MainLoop.swg, perl/Amanda/NDMP.swg,
	  perl/Amanda/Util.swg: Fix linking issue.

2015-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.7
	* ReleaseNotes: Change in 3.3.7
	* VERSION: 3.3.7

2015-01-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Add --src-labelstr argument.